<resources>
    <string name="app_name">Wackah_Mole</string>
    <string name="environment_description">Mole_environment</string>
    <string name="start_button">START</string>
    <string name="settings_button">SETTINGS</string>
    <string name="exit_button">EXIT</string>
    <string name="mole">Mole</string>
    <string name="score">Score: </string>
    <string name="high_score">High Score:</string>
    <string name="return_to_home">Return</string>
    <string name="HighScore1Key">Highscore_1</string>
    <string name="HighScore2Key">Highscore_2</string>
    <string name="HighScore3Key">Highscore_3</string>
    <string name="HighScore4Key">Highscore_4</string>
    <string name="HighScore5Key">Highscore_5</string>
    <string name="first">1st</string>
    <string name="second">2nd</string>
    <string name="third">3rd</string>
    <string name="fourth">4th</string>
    <string name="fifth">5th</string>
    <string name="dflt">100</string>
</resources>