<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:contentDescription="@string/environment_description"
        android:scaleType="fitXY"
        android:src="@drawable/environment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/congrats"
        android:layout_width="232dp"
        android:layout_height="32dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="662dp"
        android:text="CONGRADULATIONS!"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/myImageView"
        app:layout_constraintEnd_toEndOf="@+id/myImageView"
        app:layout_constraintStart_toStartOf="@+id/myImageView"
        app:layout_constraintTop_toTopOf="@+id/myImageView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/top_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="179dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="520dp"
        android:text="TOP FIVE!"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/myImageView"
        app:layout_constraintEnd_toEndOf="@+id/myImageView"
        app:layout_constraintStart_toStartOf="@+id/myImageView"
        app:layout_constraintTop_toTopOf="@+id/myImageView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="475dp"
        android:text="RANK      SCORE        NAME"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/top_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="273dp"
        android:layout_marginEnd="316dp"
        android:layout_marginBottom="426dp"
        android:text="@string/first"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/myImageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/top_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="329dp"
        android:layout_marginEnd="311dp"
        android:layout_marginBottom="370dp"
        android:text="@string/second"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/top_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="315dp"
        android:layout_marginBottom="323dp"
        android:text="@string/third"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/top_fourth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="315dp"
        android:layout_marginBottom="269dp"
        android:text="@string/fourth"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/top_fifth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="486dp"
        android:layout_marginEnd="316dp"
        android:layout_marginBottom="213dp"
        android:text="@string/fifth"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/return_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="578dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/rounded_button"
        android:text="@string/return_to_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/finScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="588dp"
        android:text="Your Score: "
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/myImageView"
        app:layout_constraintEnd_toEndOf="@+id/myImageView"
        app:layout_constraintStart_toStartOf="@+id/myImageView"
        app:layout_constraintTop_toTopOf="@+id/myImageView" />

    <TextView
        android:id="@+id/HS_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="273dp"
        android:layout_marginEnd="197dp"
        android:layout_marginBottom="426dp"
        android:text="@string/dflt"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/myImageView"
        app:layout_constraintEnd_toEndOf="@+id/myImageView"
        app:layout_constraintStart_toStartOf="@+id/myImageView"
        app:layout_constraintTop_toTopOf="@+id/myImageView" />

    <TextView
        android:id="@+id/HS_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="328dp"
        android:layout_marginEnd="197dp"
        android:layout_marginBottom="371dp"
        android:text="@string/dflt"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/myImageView"
        app:layout_constraintEnd_toEndOf="@+id/myImageView"
        app:layout_constraintStart_toStartOf="@+id/myImageView"
        app:layout_constraintTop_toTopOf="@+id/myImageView" />

    <TextView
        android:id="@+id/HS_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="197dp"
        android:layout_marginBottom="323dp"
        android:text="@string/dflt"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/myImageView"
        app:layout_constraintEnd_toEndOf="@+id/myImageView"
        app:layout_constraintStart_toStartOf="@+id/myImageView"
        app:layout_constraintTop_toTopOf="@+id/myImageView" />

    <TextView
        android:id="@+id/HS_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="197dp"
        android:layout_marginBottom="269dp"

        android:text="@string/dflt"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/myImageView"
        app:layout_constraintEnd_toEndOf="@+id/myImageView"
        app:layout_constraintStart_toStartOf="@+id/myImageView"
        app:layout_constraintTop_toTopOf="@+id/myImageView" />

    <TextView
        android:id="@+id/HS_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="486dp"
        android:layout_marginEnd="197dp"
        android:layout_marginBottom="213dp"
        android:text="@string/dflt"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/myImageView"
        app:layout_constraintEnd_toEndOf="@+id/myImageView"
        app:layout_constraintStart_toStartOf="@+id/myImageView"
        app:layout_constraintTop_toTopOf="@+id/myImageView" />


</androidx.constraintlayout.widget.ConstraintLayout>